tests/snapshots/construction_preprocess__construction_preprocess_delegation_fee_amt_invalid.snap
---
source: tests/construction_preprocess.rs
expression: response
---
Err(
    OperationsNotValid(
        [
            AmountNotValid,
        ],
    ),
)
