tests/snapshots/construction_preprocess__construction_preprocess_delegation_fee_not_negative.snap
---
source: tests/construction_preprocess.rs
expression: response
---
Err(
    OperationsNotValid(
        [
            FeeNotNegative,
        ],
    ),
)
