tests/snapshots/construction_preprocess__construction_preprocess_delegation_with_metadata.snap
---
source: tests/construction_preprocess.rs
expression: response
---
Ok(
    ConstructionPreprocessResponse {
        options: Some(
            Object {
                "memo": String("hello"),
                "receiver": String("B62qiburnzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzmp7r7UN6X"),
                "sender": String("B62qkXajxfnicuCNtaurdAhQpkFsqjoyPJuw53aeJP848bsa3Ne3RvB"),
                "token_id": String("wSHV2S4qX9jFsLjQo8r1BsMLH2ZRKsZx6EJd1sbozGPieEC4Jf"),
                "valid_until": String("20000"),
            },
        ),
        required_public_keys: Some(
            [],
        ),
    },
)
