tests/snapshots/construction_preprocess__construction_preprocess_empty.snap
---
source: tests/construction_preprocess.rs
expression: response
---
Err(
    OperationsNotValid(
        [
            LengthMismatch(
                "Expected 2 operations for delegation or 3 for payment, got 0",
            ),
        ],
    ),
)
