tests/snapshots/construction_preprocess__construction_preprocess_payment_dec_inc_mismatch.snap
---
source: tests/construction_preprocess.rs
expression: response
---
Err(
    OperationsNotValid(
        [
            AmountIncDecMismatch,
        ],
    ),
)
