tests/snapshots/construction_preprocess__construction_preprocess_payment_fee_payer_mismatch.snap
---
source: tests/construction_preprocess.rs
expression: response
---
Err(
    OperationsNotValid(
        [
            FeePayerAndSourceMismatch,
        ],
    ),
)
