tests/snapshots/construction_preprocess__construction_preprocess_payment_invalid_pk.snap
---
source: tests/construction_preprocess.rs
expression: response
---
Err(
    PublicKeyFormatNotValid(
        "Malformed public key: Checksum mismatch",
    ),
)
