tests/snapshots/construction_preprocess__construction_preprocess_payment_with_metadata.snap
---
source: tests/construction_preprocess.rs
expression: response
---
Ok(
    ConstructionPreprocessResponse {
        options: Some(
            Object {
                "memo": String("hello"),
                "receiver": String("B62qoDWfBZUxKpaoQCoFqr12wkaY84FrhxXNXzgBkMUi2Tz4K8kBDiv"),
                "sender": String("B62qkUHaJUHERZuCHQhXCQ8xsGBqyYSgjQsKnKN5HhSJecakuJ4pYyk"),
                "token_id": String("1"),
                "valid_until": String("20000"),
            },
        ),
        required_public_keys: Some(
            [],
        ),
    },
)
